--- a/_includes/header.html
+++ b/_includes/header.html
@@ -80,18 +80,27 @@
     <line fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="28" x1="839.386" y1="360.917" x2="898.386" y2="360.917"/>
   </g>
   <g id="subU-def">
-    <path d="M397.357,274.667h-10.941v-8.515c0-2.448,1.984-4.432,4.432-4.432h2.171c2.396,0,4.338,1.942,4.338,4.338
+    <!-- <path d="M397.357,274.667h-10.941v-8.515c0-2.448,1.984-4.432,4.432-4.432h2.171c2.396,0,4.338,1.942,4.338,4.338
       V274.667z"/>
     <path d="M533.357,274.667h-10.941v-8.515c0-2.448,1.984-4.432,4.432-4.432h2.171c2.396,0,4.338,1.942,4.338,4.338
-      V274.667z"/>
+      V274.667z"/> -->
+
+    <line fill="none" stroke="#B79F16" stroke-width="11" stroke-linecap="round" stroke-miterlimit="28" x1="527.886" y1="268.5" x2="527.886" y2="431"/>
+  
+    <line fill="none" stroke="#B79F16" stroke-width="11" stroke-linecap="round" stroke-miterlimit="28" x1="391.886" y1="267.5" x2="391.886" y2="430"/>
   </g>
   <g id="U-def">
-    <path stroke='none' d="M533.357,274.526v-0.011c-0.1-0.093-0.194-0.192-0.285-0.293c-0.063-0.04-0.131-0.075-0.194-0.116
+
+    <path fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="10" d="M391.886,279.25v145.657
+    c0,8.387,3.415,16.43,9.493,22.36h0c7.208,7.032,16.983,10.983,27.177,10.983h58.441c11.134,0,21.812-4.315,29.686-11.997l0,0
+    c7.414-7.233,11.579-17.044,11.579-27.273V280.439"/>
+
+ <!--    <path stroke='none' d="M533.357,274.526v-0.011c-0.1-0.093-0.194-0.192-0.285-0.293c-0.063-0.04-0.131-0.075-0.194-0.116
       c-0.267-0.13-0.516-0.28-0.742-0.454v0.01c-1.252-0.735-2.701-1.163-4.25-1.163c-4.687,0-8.5,3.854-8.5,8.593V425.8
       c0,12.475-7.472,23.014-16.315,23.014h-86.369c-8.844,0-16.315-10.539-16.315-23.014V281.093c0-2.588-1.144-4.905-2.94-6.481
       c-0.189-0.124-0.367-0.259-0.53-0.407c-0.289-0.16-0.562-0.338-0.799-0.551c-1.248-0.728-2.69-1.153-4.231-1.153
       c-4.687,0-8.5,3.854-8.5,8.593V425.8c0,22.166,14.945,40.2,33.315,40.2h86.369c18.37,0,33.315-18.034,33.315-40.2V281.093
-      C536.386,278.46,535.207,276.103,533.357,274.526z"/>
+      C536.386,278.46,535.207,276.103,533.357,274.526z"/> -->
   </g>
   <g id="subL-def">
     <line id="subvert" stroke-width="11" stroke-linecap="round" stroke-miterlimit="28" x1="52.72" y1="266.5" x2="52.72" y2="461.5"/>
@@ -181,7 +190,7 @@
 <g id="neon">
   <g id="G" class="bulb" style="stroke:rgb(200,30,80);fill:rgb(200,30,80);" filter="url(#blur)">
     <use xlink:href="#G-def"></use></g>
-  <g id="U" fill="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#U-def"/></g>
+  <g id="U" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#U-def"/></g>
   <g id="L" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#L-def"/></g>
   <g id="N1" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#N1-def"/></g>
   <g id="O" fill="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#O-def"/></g>
