sine wave first stub

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,6 +61,7 @@
    </linearGradient>   
 
   <g id="subG-def">
+  <!--
     <path d="M912.037,382.344c-8.615,42.1-46.108,72.656-89.151,72.656c-50.178,0-91-40.822-91-91s40.822-91,91-91
       c32.385,0,62.59,17.435,78.826,45.499c1.422,2.459,2.589,4.859,2.589,4.859c0.721,1.484,2.66,2.748,4.309,2.808
       c0,0,1.223-0.405,2.216-1.673c0.992-1.268,1.21-3.518,0.484-5c0,0-1.223-2.494-2.673-4.999
@@ -68,8 +69,15 @@
       c0.77-3.764,1.254-7.472,1.254-7.472c0.214-1.636-0.962-2.975-2.612-2.975h-2.03c-1.65,0-3.188,1.337-3.417,2.971
       C913.07,376.471,912.7,379.106,912.037,382.344z"/>
     <line fill="none" stroke-width="11" stroke-linecap="round" stroke-miterlimit="28" x1="825.386" y1="361.083" x2="911.386" y2="361.083"/>
+    -->
+    <path fill="none" stroke-width="11" stroke-linecap="round" stroke-miterlimit="28" d="M916.432,373.021
+    c-4.699,48.077-45.235,85.646-94.545,85.646c-52.467,0-95-42.533-95-95s42.533-95,95-95c39.206,0,72.865,23.75,87.375,57.648"/>
+  <path fill="none" stroke-width="11" stroke-linecap="round" stroke-miterlimit="28" d="M916.886,363.667"/>
+  
+    <line fill="none" stroke-width="11" stroke-linecap="round" stroke-miterlimit="28" x1="825.386" y1="361.083" x2="911.386" y2="361.083"/>
   </g>
   <g id="G-def">
+  <!--
     <path stroke='none' d="M822.886,261.5c-56.519,0-102.5,45.981-102.5,102.5c0,39.691,22.677,74.183,55.755,91.205l5.501-14.055
       c-27.507-14.764-46.256-43.807-46.256-77.151c0-48.248,39.252-87.5,87.5-87.5c7.591,0,14.958,0.973,21.986,2.799l6.047-13.902
       C842.006,262.859,832.602,261.5,822.886,261.5z"/>
@@ -77,6 +85,16 @@
     c6.267,1.202,12.733,1.839,19.345,1.839c49.146,0,90.317-34.77,100.224-81H907.71z"/>
     <path stroke='none' d="M911.189,312.035c-11.803-20.535-23.277-30.575-44.35-40.62l-5.985,13.76
     c15.562,7.527,28.573,19.529,37.348,34.325L911.189,312.035z"/>
+    <line fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="28" x1="839.386" y1="360.917" x2="898.386" y2="360.917"/>
+    -->
+      <path fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="28" d="M761.458,436.973
+    c-21.114-17.424-34.571-43.794-34.571-73.307c0-52.467,42.533-95,95-95c5.946,0,11.765,0.546,17.409,1.592"/>
+  <path fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="28" d="M914.32,385.691
+    c-9.934,41.847-47.548,72.976-92.434,72.976c-9.407,0-18.495-1.367-27.075-3.914"/>
+  <path fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="28" d="M916.886,363.667"/>
+  <path fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="28" d="M869.254,281.3
+    c14.133,8.145,25.974,19.824,34.314,33.829"/>
+  
     <line fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="28" x1="839.386" y1="360.917" x2="898.386" y2="360.917"/>
   </g>
   <g id="subU-def">
@@ -121,15 +139,20 @@
     650.958,219.708 527.886,51.473 527.886,220  "/>
   </g>
   <g id="subO-def">
-    <circle fill="none" stroke-width="8" stroke-miterlimit="10" cx="402.886" cy="132" r="95"/>
+    <!-- <circle fill="none" stroke-width="8" stroke-miterlimit="10" cx="402.886" cy="132" r="95"/> -->
+    <circle fill="none" stroke-width="11" stroke-linecap="round" stroke-miterlimit="28" cx="401.886" cy="127.667" r="95"/>
   </g>
   <g id="O-def">
-    <path stroke='none' id="tube_8_" d="M361.642,209.151c-27.507-14.764-46.256-43.807-46.256-77.151
+<!--     <path stroke='none' id="tube_8_" d="M361.642,209.151c-27.507-14.764-46.256-43.807-46.256-77.151
       c0-48.248,39.252-87.5,87.5-87.5c7.591,0,14.958,0.973,21.986,2.799l6.047-13.902c-8.913-2.537-18.317-3.896-28.033-3.896
       c-56.519,0-102.5,45.981-102.5,102.5c0,39.691,22.677,74.183,55.755,91.205L361.642,209.151z"/>
     <path stroke='none' id="tube_7_" d="M446.84,39.415l-5.985,13.76c29.284,14.163,49.531,44.174,49.531,78.825
       c0,48.248-39.252,87.5-87.5,87.5c-4.684,0-9.282-0.374-13.768-1.087l-5.577,14.248c6.267,1.202,12.733,1.839,19.345,1.839
-      c56.519,0,102.5-45.981,102.5-102.5C505.386,91.203,481.425,55.9,446.84,39.415z"/>
+      c56.519,0,102.5-45.981,102.5-102.5C505.386,91.203,481.425,55.9,446.84,39.415z"/> -->
+      <path fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="28" d="M342.457,201.973
+    c-21.113-17.424-34.571-43.794-34.571-73.307c0-52.467,42.533-95,95-95c5.946,0,11.765,0.546,17.409,1.592"/>
+  <path fill="none" stroke-width="17" stroke-linecap="round" stroke-miterlimit="28" d="M450.254,46.3
+    c28.469,16.407,47.632,47.149,47.632,82.367c0,52.467-42.533,95-95,95c-9.407,0-18.495-1.367-27.075-3.914"/>
   </g>
   <g id="subE-def">
     <line fill="none" stroke-width="11" stroke-linecap="round" stroke-miterlimit="28" x1="208.886" y1="221.083" x2="296.886" y2="221.083"/>
@@ -188,12 +211,12 @@
 
 
 <g id="neon">
-  <g id="G" class="bulb" style="stroke:rgb(200,30,80);fill:rgb(200,30,80);" filter="url(#blur)">
+  <g id="G" class="bulb" style="stroke:rgb(200,30,80)" filter="url(#blur)">
     <use xlink:href="#G-def"></use></g>
   <g id="U" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#U-def"/></g>
   <g id="L" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#L-def"/></g>
   <g id="N1" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#N1-def"/></g>
-  <g id="O" fill="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#O-def"/></g>
+  <g id="O" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#O-def"/></g>
   <g id="E" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#E-def"/></g>
   <g id="N" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#N-def"/></g>
   <g id="E1" stroke="rgb(200,30,80)" filter="url(#blur)">
@@ -201,7 +224,7 @@
     <use xlink:href="#vert" x="895" y="0"/>
   </g>
   <g id="N2" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#N1-def" x="36" y="230"/></g>
-  <g id="O1" fill="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#O-def" x="-136" y="234"/></g>
+  <g id="O1" stroke="rgb(200,30,80)" filter="url(#blur)"><use xlink:href="#O-def" x="-136" y="234"/></g>
 </g>
 
 
