--- a/_sass/_neon.scss
+++ b/_sass/_neon.scss
@@ -1,7 +1,3 @@
-// .tube {
-// 	stroke: blue;
-// }
-
 .css-filter-blur { margin: 10px;
   -webkit-transition: all 5.3s ease-out; 
      -moz-transition: all 0.3s ease-out; 
@@ -10,20 +6,24 @@
           transition: all 0.3s ease-out;
 }
 
+.sub-logo {
+  stroke: $yellow-color;
+}
+
 .bulb {
   -webkit-animation-name: glow-blue;
   -webkit-animation-duration: 0.1s;
   -webkit-animation-iteration-count: 5;
   -webkit-animation-timing-function: ease-in-out;
   -webkit-animation-direction: alternate;
-  -webkit-animation-delay: 0.2s;
+  -webkit-animation-delay: 5s;
   
   animation-name: glow-blue;
   animation-duration: 0.1s;
   animation-iteration-count: 5;
   animation-timing-function: ease-in-out;
   animation-direction: alternate;
-  animation-delay: 0.2s;
+  animation-delay: 5s;
 }
 
 @-webkit-keyframes glow-blue {
