--- a/css/main.scss
+++ b/css/main.scss
@@ -3,8 +3,6 @@
 ---
 @charset "utf-8";
 
-
-
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
@@ -24,6 +22,9 @@ $grey-color-dark:  darken($grey-color, 25%);
 $on-palm:          600px;
 $on-laptop:        800px;
 
+$yellow-color: rgb(255,183,10);
+$blue-color: rgb(25,110,238);
+$green-color: rgb(6,162,95); 
 
 
 // Using media queries with like this:
@@ -39,12 +40,11 @@ $on-laptop:        800px;
     }
 }
 
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
         "layout",
         "neon",
+        "menu",
         "syntax-highlighting"
 ;
