toggle slide menu
change settings icon color

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -57,7 +57,7 @@ nav.menu {
     position: fixed;
     /*z-index: 20;*/
     z-index: 10;
-    background-color: #67b5d1;
+    background-color: $blue-color;
     overflow: hidden;   
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
