about page design
removed blur logo animation, minor config wording

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <defs>
           <filter id="blur" x="-40%" y="-40%" width="180%" height="180%">
             <feGaussianBlur in="SourceGraphic"  dx="0" stdDeviation="5" result="blur">
-              <animate attributeName="stdDeviation" dur="0.2s" values="5;4;5" repeatCount="indefinite" />
+              <!-- <animate attributeName="stdDeviation" dur="0.2s" values="5;4;5" repeatCount="indefinite" /> -->
             </feGaussianBlur>
             <!--beefs up the gaussian blur by copying it -->
             <feOffset in="blur" dx="0" result="blurXtraHue"   /> 
