--- a/css/main.scss
+++ b/css/main.scss
@@ -46,5 +46,6 @@ $green-color: rgb(6,162,95);
         "layout",
         "neon",
         "menu",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "about"
 ;
