--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -30,12 +30,12 @@ body {
 }
 
 .menu-button {
-    width: 5%;
-    margin-top: 1%;
-    margin-left: 1%;
-    /*float: left;*/
+    width: 48px;
+    margin-top: 5px;
+    margin-left: 5px;
     position: absolute;
     left: 0px;
+    top: 0px;
     z-index: 25;
 }
 
