--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,9 +4,11 @@
 .site-header {
     border-top: 4px solid $yellow-color;
     border-bottom: 4px solid $green-color;
-    min-height: 170px;
+    height: 170px;
+    @media screen and (max-width: 450px) {
+        height: 125px;
+    }
     background-color: black;
-
     // Positioning context for the mobile navigation icon
     position: relative;
 }
@@ -29,12 +31,12 @@
     position: relative;
     float: right;
     width: 380px;
-    // @media screen and (min-width: 450px) {
-    //     width: 380px;
-    // }
-    // @media screen and (max-width: 450px) {
-    //     width: 180px;
-    // }
+    @media screen and (min-width: 450px) {
+        width: 380px;
+    }
+    @media screen and (max-width: 450px) {
+        width: 270px;
+    }
 }
 
 .settings-icon-closed {
