check setting icon mobile position

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -150,12 +150,13 @@
   <!-- Navigation Icon -->
   <div class="menu-button">
      <a href="#" class="menu-icon" title="Open site navigation">
-      <svg viewBox="-1 -2 18 15">
+     X
+<!--       <svg viewBox="-1 -2 18 15">
         <g id="settings-icon" class="settings-icon-closed">
           <line x1="0" y1="0" x2="16" y2="0"/>
           <line x1="0" y1="4" x2="16" y2="4"/>
           <line x1="0" y1="8" x2="16" y2="8"/>
-        </g>
+        </g> -->
       </svg>
     </a> 
   </div> 
