--- a/_includes/header.html
+++ b/_includes/header.html
@@ -151,7 +151,7 @@
   <div class="menu-button">
      <a href="#" class="menu-icon" title="Open site navigation">
 
-      <svg viewBox="-1 -2 18 15">
+      <svg > <!-- viewBox="-1 -2 18 15" -->
         <g id="settings-icon" class="settings-icon-closed">
           <line x1="0" y1="0" x2="16" y2="0"/>
           <line x1="0" y1="4" x2="16" y2="4"/>
