remove svg viewBox

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -34,9 +34,9 @@ body {
     margin-top: 5px;
     margin-left: 5px;
     vertical-align: top;
-    // position: absolute;
-    // left: 0px;
-    // top: 0px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
     z-index: 25;
 }
 
