--- a/_includes/header.html
+++ b/_includes/header.html
@@ -150,12 +150,11 @@
   <!-- Navigation Icon -->
   <div class="menu-button">
      <a href="#" class="menu-icon" title="Open site navigation">
-
-      <svg > <!-- viewBox="-1 -2 18 15" -->
+      <svg >
         <g id="settings-icon" class="settings-icon-closed">
-          <line x1="0" y1="5" x2="48" y2="5"/>
-          <line x1="0" y1="15" x2="48" y2="15"/>
-          <line x1="0" y1="25" x2="48" y2="25"/>
+          <line x1="0" y1="8" x2="48" y2="8"/>
+          <line x1="0" y1="18" x2="48" y2="18"/>
+          <line x1="0" y1="28" x2="48" y2="28"/>
         </g>
       </svg>
     </a> 
