--- a/_includes/header.html
+++ b/_includes/header.html
@@ -139,10 +139,19 @@
   </div>
   <!-- Navigation -->
   <nav class="menu slide-menu-left">
-    <ul>
+    <ul class="navigation-links">
+      <li>Latest Posts:</li>
+      {% for post in site.posts %}
+        <li>
+          <a class="page-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+        </li>
+      {% endfor %}
+
       {% for page in site.pages %}
         {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          <li>
+            <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          </li>
         {% endif %}
       {% endfor %}
     </ul>
