fixed overlapping sag tag issue
it was preventing clicking on the top link
also cleanup unnecessary styles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -159,7 +159,7 @@
   <!-- Navigation Icon -->
   <div class="menu-button">
      <a href="#" class="menu-icon" title="Open site navigation">
-      <svg >
+      <svg class="settings-svg">
         <g id="settings-icon" class="settings-icon-closed">
           <line x1="0" y1="8" x2="48" y2="8"/>
           <line x1="0" y1="18" x2="48" y2="18"/>
