--- a/_includes/header.html
+++ b/_includes/header.html
@@ -143,7 +143,7 @@
       <li>Latest Posts:</li>
       {% for post in site.posts %}
         <li>
-          <a class="page-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          <a class="post" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
         </li>
       {% endfor %}
 
