--- a/_sass/_neon.scss
+++ b/_sass/_neon.scss
@@ -11,25 +11,28 @@
 }
 
 .bulb {
+  stroke: inherit;
   -webkit-animation-name: glow-blue;
   -webkit-animation-duration: 0.1s;
   -webkit-animation-iteration-count: 5;
   -webkit-animation-timing-function: ease-in-out;
   -webkit-animation-direction: alternate;
-  -webkit-animation-delay: 5s;
+  -webkit-animation-delay: 0.1s;
   
   animation-name: glow-blue;
   animation-duration: 0.1s;
   animation-iteration-count: 5;
   animation-timing-function: ease-in-out;
   animation-direction: alternate;
-  animation-delay: 5s;
+  animation-delay: 0.1s;
 }
 
 @-webkit-keyframes glow-blue {
+  0% {stroke: hsl(0,0,0)}
   100% { stroke: hsl(255, 255, 255); }
 }
 
 @keyframes glow-blue {
+  0% {stroke: hsl(0,0,0)}
   100% { stroke: hsl(255, 255, 255); }
 }
