--- a/css/main.scss
+++ b/css/main.scss
@@ -26,6 +26,7 @@ $on-mobile:		   450px;
 $yellow-color: rgb(255,183,10);
 $blue-color: rgb(25,110,238);
 $green-color: rgb(6,162,95); 
+$pink-color: rgb(200,30,80);
 
 
 // Using media queries with like this:
