--- a/_sass/_neon.scss
+++ b/_sass/_neon.scss
@@ -10,29 +10,42 @@
   stroke: $yellow-color;
 }
 
-.bulb {
-  stroke: inherit;
-  -webkit-animation-name: glow-blue;
-  -webkit-animation-duration: 0.1s;
-  -webkit-animation-iteration-count: 5;
-  -webkit-animation-timing-function: ease-in-out;
-  -webkit-animation-direction: alternate;
-  -webkit-animation-delay: 0.1s;
-  
-  animation-name: glow-blue;
+$duration: 1s;
+
+.delay {
+  animation-delay: $duration;
+  animation-name: glow-two;
   animation-duration: 0.1s;
-  animation-iteration-count: 5;
-  animation-timing-function: ease-in-out;
-  animation-direction: alternate;
-  animation-delay: 0.1s;
+
+  -moz-animation-delay: $duration;
+  -moz-animation-name: glow-two;
+  -moz-animation-duration: 0.1s;
+
+  -webkit-animation-delay: $duration;
+  -webkit-animation-name: glow-two;
+  -webkit-animation-duration: 0.1s;
 }
 
-@-webkit-keyframes glow-blue {
-  0% {stroke: hsl(0,0,0)}
-  100% { stroke: hsl(255, 255, 255); }
+@keyframes glow-two {
+  to {fill: $yellow-color;}
+}
+
+@-webkit-keyframes glow-two {
+  to {fill: $yellow-color;}
+}
+
+@-moz-keyframes glow-two {
+  to {fill: $yellow-color;}
+}
+
+.bulb {
+  stroke: inherit;
+  animation-name: glow-blue;
+  animation-duration: 0.2s;
+  animation-iteration-count: 4;
 }
 
 @keyframes glow-blue {
-  0% {stroke: hsl(0,0,0)}
-  100% { stroke: hsl(255, 255, 255); }
+  from {stroke: black;}
+  to { stroke: hsl(255, 255, 255); }
 }
