mailto on footer link and svg fallback

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
           </li>
           {% endif %}
 
-          <li><a href="" class="page-link">{{ site.email }}</a></li>
+          <li><a href="mailto:{{ site.email }}" class="page-link">{{ site.email }}</a></li>
 
           {% if site.twitter_username %}
           <li>
