assets for refme responsive layout

--- a/css/main.scss
+++ b/css/main.scss
@@ -61,5 +61,6 @@ $pink-color: rgb(200,30,80);
         "neon",
         "menu",
         "syntax-highlighting",
-        "about"
+        "about",
+        "refme"
 ;
